@@ -61,7 +61,7 @@ checksum=org.apache.tools.ant.taskdefs.Checksum
 waitfor=org.apache.tools.ant.taskdefs.WaitFor
 input=org.apache.tools.ant.taskdefs.Input
 loadfile=org.apache.tools.ant.taskdefs.LoadFile
-manifest=org.apache.tools.ant.taskdefs.Manifest
+manifest=org.apache.tools.ant.taskdefs.ManifestTask
 loadproperties=org.apache.tools.ant.taskdefs.LoadProperties
 basename=org.apache.tools.ant.taskdefs.Basename
 dirname=org.apache.tools.ant.taskdefs.Dirname
